// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcTable-AlignedValue Render with all data 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int"
      >
        123
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac"
      >
        .45
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_unit"
      >
        GB
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`AbcTable-AlignedValue Render with minimal data 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int"
      >
        123
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac"
      />
    </tr>
  </tbody>
</table>
`;

exports[`AbcTable-AlignedValue Should propagate provided cell props to all cells 1`] = `
<table
  class="AbcTable"
>
  <tbody>
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_int custom-class-name"
        colspan="42"
      >
        123
      </td>
      <td
        class="AbcTable-Td AbcTable-AlignedValue AbcTable-AlignedValue_frac custom-class-name"
        colspan="42"
      />
    </tr>
  </tbody>
</table>
`;
